--- a/_layouts/website.html
+++ b/_layouts/website.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-GB" }}">
   <head>
+    <title> Intro </title>
       <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
