--- a/_layouts/website.html
+++ b/_layouts/website.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang | default: "en-GB" }}">
+<html lang="en-GB">
   <head>
     <title> Intro </title>
       <script>
@@ -7,19 +7,14 @@
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
       </script>
-    {% endif %}
     <meta charset="UTF-8">
-
-{% seo %}
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   </head>
+  
   <body>
-    
     <main id="content" class="main-content" role="main">
-      {{ content }}
     </main>
   </body>
 </html>
